[package]
name = "memory-mcp-rs"
version = "0.1.0"
edition = "2021"
authors = ["MCP Community"]
license = "MIT"
description = "SQLite-based knowledge graph MCP server for persistent memory"
repository = "https://github.com/ssoj13/memory-mcp-rs"
homepage = "https://github.com/ssoj13/memory-mcp-rs"
keywords = ["mcp", "memory", "server", "protocol", "llm"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[[bin]]
name = "memory-mcp-rs"
path = "src/main.rs"

[dependencies]
# MCP Framework
rmcp = { version = "0.9.1", features = ["transport-io", "server", "macros"] }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# SQLite (bundled = не требует system libsqlite3)
rusqlite = { version = "0.32", features = ["bundled"] }

# Connection pooling для параллельных read операций
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Serialization (для observations JSON array)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0.69"
anyhow = "1.0"

# Schemas
schemars = { version = "1.1.0", features = ["derive"] }

# Directories
dirs = "5.0"

[dev-dependencies]
tempfile = "3.23"
