[package]
name = "memory-mcp-rs"
version = "0.1.1"
edition = "2021"
authors = ["MCP Community"]
license = "MIT"
description = "SQLite-based knowledge graph MCP server for persistent memory"
repository = "https://github.com/ssoj13/memory-mcp-rs"
homepage = "https://github.com/ssoj13/memory-mcp-rs"
keywords = ["mcp", "memory", "server", "protocol", "llm"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[[bin]]
name = "memory-mcp-rs"
path = "src/main.rs"

[dependencies]
# MCP Framework
rmcp = { version = "0.9.1", features = ["transport-io", "server", "macros", "transport-streamable-http-server"] }

# Web framework for HTTP transport
axum = "0.8"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# SQLite (bundled = не требует system libsqlite3)
rusqlite = { version = "0.37", features = ["bundled"] }

# Connection pooling для параллельных read операций
r2d2 = "0.8"
r2d2_sqlite = "0.31"

# Serialization (для observations JSON array)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Schemas
schemars = { version = "1.1.0", features = ["derive"] }

# Directories
dirs = "6.0"

[dev-dependencies]
tempfile = "3.23"
reqwest = { version = "0.12", features = ["json"] }
